[package]
name = "ccip-read-server"
description = "CCIP-READ Server Framework"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
keywords = ["ccip", "ensdomains"]
homepage = "https://github.com/jeje/ccip-read-server-rs"
repository = "https://github.com/jeje/ccip-read-server-rs"
documentation = "https://docs.rs/ccip-read-server"
readme = "README.md"

[dependencies]

# Ethers
#ethers = "2.0.7"
ethers-core = "2.0.7"
ethers-contract = "2.0.7"
ethers-providers = "2.0.7"
futures-util = "0.3.28"

# Axum
axum = { version = "0.6.18", features = ["tracing"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tokio = { version = "1.28.2", features = ["full"] }

# Async
async-recursion = "1.0.4"
async-trait = { version = "0.1.68" }

# Error handling
thiserror = "1.0.40"

# Tracing
tracing = "0.1.37"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
ethers = "2.0.7"
anyhow = "1.0"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
